syntax = "proto3";
package v1.instrument_service;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/vectorman1/analysis-api/generated/instrument_service";

service InstrumentService {
  rpc GetPaged (PagedRequest) returns (PagedResponse) {
    option (google.api.http) = {
      post: "/api/v1/symbols/paged",
      body: "*"
    };
  }
  rpc Overview (InstrumentRequest) returns (InstrumentOverview) {
    option (google.api.http) = {
      get: "/api/v1/instruments/{uuid}/overview"
    };
  }
  rpc Get (InstrumentRequest) returns (Instrument) {
    option (google.api.http) = {
      get: "/api/v1/instruments/{uuid}"
    };
  }
  rpc UpdateAll (StartUpdateJobRequest) returns (UpdateAllResponse) {
    option (google.api.http) = {
      post: "/api/v1/instruments/updateAll",
    };
  }
  rpc History (HistoryRequest) returns (HistoryResponse) {
    option (google.api.http) = {
      post: "/api/v1/instruments/{uuid}/history",
    };
  }
  rpc Chart (ChartRequest) returns (ChartResponse) {
    option (google.api.http) = {
      post: "/api/v1/instruments/{uuid}/chart",
    };
  }
  rpc UpdateAllJob (StartUpdateJobRequest) returns (StartUpdateJobResponse) {
    option (google.api.http) = {
      post: "/api/v1/instruments/updateAllJob",
    };
  }
}

message Instrument {
  string uuid = 2;
  string currency_code = 3;

  string isin = 5;
  string identifier = 6;
  string name = 7;
  float minimum_order_quantity = 8;
  string market_name = 9;
  string market_hours_gmt = 10;

  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
  google.protobuf.Timestamp deleted_at = 13;
}

message Instruments {
  repeated Instrument symbols = 1;
}
message PagedFilter {
  uint64 pageSize = 1;
  uint64 pageNumber = 2;
  string order = 3;
  bool ascending = 4;
  string text = 5;
}
message PagedRequest {
  PagedFilter filter = 1;
}
message PagedResponse {
  repeated Instrument items = 1;
  uint64 totalItems = 2;
}
message StartUpdateJobRequest {
}
message StartUpdateJobResponse {
}
message UpdateAllResponse {
  int64 itemsCreated = 1;
  int64 itemsUpdated = 2;
  int64 itemsDeleted = 3;
  int64 itemsIgnored = 4;
  int64 totalItems = 5;
}
message InstrumentOverview {
  string description = 2;
  string country = 3;
  string sector = 4;
  string industry = 5;
  string address = 6;
  int64 fullTimeEmployees = 7;
  string fiscalYearEnd = 8;
  google.protobuf.Timestamp latestQuarter = 9;
  int64 marketCapitalization = 10;
  int64 ebitda = 11;
  float peRatio = 12;
  float pegRatio = 13;
  float bookValue = 14;
  float dividendPerShare = 15;
  float dividendYield = 16;
  float eps = 17;
  float revenuePerShareTtm = 18;
  float profitMargin = 19;
  float operatingMarginTtm = 20;
  float returnOnAssetsTtm = 21;
  float returnOnEquity = 22;
  int64 revenueTtm = 23;
  int64 grossProfitTtm = 24;
  float dilutedEpsTtm = 25;
  float quarterlyEarningsGrowthYoy = 26;
  float quarterlyRevenueGrowthYoy = 27;
  float analystTargetPrice = 28;
  float trailingPe = 29;
  float forwardPe = 30;
  float priceToSalesRatioTtm = 31;
  float priceToBookRatio = 32;
  float evToRevenue = 33;
  float evToEbitda = 34;
  float beta = 35;
  float weekHigh52 = 36;
  float weekLow52 = 37;
  int64 sharesOutstanding = 38;
  int64 sharesFloat = 39;
  int64 sharesShort = 40;
  int64 sharesShortPriorMonth = 41;
  float shortRatio = 42;
  float shortPercentOutstanding = 43;
  float shortPercentFloat = 44;
  float percentInsiders = 45;
  float percentInstitutions = 46;
  float forwardAnnualDividendRate = 47;
  float forwardAnnualDividendYield = 48;
  float payoutRatio = 49;
  google.protobuf.Timestamp dividendDate = 50;
  google.protobuf.Timestamp exDividendDate = 51;
  string lastSplitFactor = 52;
  google.protobuf.Timestamp lastSplitDate = 53;
  google.protobuf.Timestamp updatedAt = 54;
}
message InstrumentRequest {
  string uuid = 1;
}
message HistoryRequest {
  string uuid = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
}
message HistoryResponse {
  repeated History items = 1;
}
message ChartRequest {
  string uuid = 1;
}
message ChartResponse {
  repeated string dates = 1;
  repeated ChartDay chartDays = 2;
}
message ChartDay {
  repeated double values = 1;
}
message HistoryUpdateJobRequest {}
message HistoryUpdateJobResponse {}
message History {
  double open = 1;
  double close = 2;
  double high = 3;
  double low = 4;
  int64 volume = 5;
  google.protobuf.Timestamp timestamp = 6;
  double adjClose = 8;
}

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    title: "Instrument Service";
    version: "1.0";
    contact: {
      name: "Dystopia Systems";
      url: "https://dystopia.systems";
      email: "admin@dystopia.systems";
    };
  };
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  responses: {
    key: "401";
    value: {
      description: "Returned when the request didn't or passed an invalid user token in the request headers.";
      schema: {
        json_schema: {
          type: STRING;
        }
      }
    }
  }
};
